tuprolog accelerated